src/objects/DistributionJob__c.object
<CustomObject>
    <fields>
        <fullName>CountComment__c</fullName>
        <label>Count Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CountStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Count Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateModified__c</fullName>
        <label>DateModified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliverComment__c</fullName>
        <label>Deliver Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeliverStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Distribution</label>
        <referenceTo>Distribution__c</referenceTo>
        <relationshipLabel>Distribution Jobs</relationshipLabel>
        <relationshipName>Distribution_Jobs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <label>ImageURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallComment__c</fullName>
        <label>Install Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InstallStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallerID__c</fullName>
        <label>Installer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotosComments__c</fullName>
        <label>Photos Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PhotosStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photos Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Distribution Jobs</relationshipLabel>
        <relationshipName>Distribution_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Distribution Job</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DistributionJobID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>